--- a/src/components/CourseGoals/CourseInput/CourseInput.css
+++ b/src/components/CourseGoals/CourseInput/CourseInput.css
@@ -22,3 +22,12 @@
   background: #fad0ec;
   border-color: #8b005d;
 }
+
+.form-control.invalid input {
+  background: rgb(255, 94, 94);
+  border-color: #fad0ec;
+}
+
+.form-control.invalid label {
+  color: rgb(255, 94, 94);
+}
